--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
     crossorigin="anonymous"
   />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script type="text/javascript" src="./main.js"></script>
+
+
   </head>
   <body>
     <div class="wrap">
@@ -41,21 +46,21 @@
       <div class="background_video">
         <div class="inner">
           <div class="video_letter">
-            <h3>THE STORY</h3>
-            <h2>MOVES <img src="./img/가로선.png" /></h2>
-            <h3>WORLD</h3>
-            <p>스토리가 고객의 마음을 움직입니다.</p>
+            <h3 class="vl1">THE STORY</h3>
+            <h2 class="vl2">MOVES <img src="./img/가로선.png" /></h2>
+            <h3 class="vl3">WORLD</h3>
+            <p class="vl4">스토리가 고객의 마음을 움직입니다.</p>
           </div>
         </div>
       </div>
       <div class="sec_background">
         <div class="inner">
           <h3 class="dot">"</h3>
-          <h2 class="contents">
+          <h2 id="enComment" class="contents fadeDown" >
             Customers are immersed in the story,not the brand.<br />More
             importantly,no customer can resist the story.
           </h2>
-          <p>
+          <p id="koComment" class="fadeDown">
             고객이 몰입하는 것은 브랜드가 아닌 그것이 가진 스토리입니다.<br />중요한
             것은 스토리에 저항할 수 잇는 사람은 없다는 점입니다.
           </p>
@@ -65,26 +70,26 @@
       </div>
       <div class="third_background">
         <div class="inner">
-          <div class="aline">
+          <div id="ourstory" class="aline fadeDown">
             <span class="num">01</span>
             <h3>Our Story</h3>
           </div>
-          <div class="aline">
+          <div id="storybased" class="aline fadeDown">
             <span class="num">02</span>
             <h3 class="storybased">Story-Based 
                 <span>Branding</h3>
         </div>
-        <div class="aline">
+        <div id="sales"  class="aline fadeDown">
             <span class="num">03</span>
             <h3><span>Sales</span>
                 Storytelling</h3>
             </div>
-            <div class="aline">
+            <div id="consulting"  class="aline fadeDown">
                 <span class="num">04</span>
             <h3>Storytelling 
                 <span>Consulting</span></h3>
             </div>
-            <div class="aline">
+            <div id="work" class="aline fadeDown">
                 <span class="num">05</span>
             <h3><span>Work</span></h3>
             </div>
@@ -92,12 +97,12 @@
         </div>
         <div class="fourth_background">
             <div class="inner">
-                <p class="contents">
+                <p class="contents fadeDown">
                     이미 수많은 브랜드가<br>
                 <span>전담의 스토리로 소통하고 있습니다.</span>
                 </p>
                 <div class="container largeIcons">
-                    <div class="row">
+                    <div class="row fadeDown">
                       <div class="col">
                         <img src="./img/cellrtion-logo copy.png"/>
                       </div>
@@ -114,7 +119,7 @@
                         <img src="./img/glasslock-logo copy.png">
                       </div>
                     </div>
-                    <div class="row">
+                    <div class="row fadeDown">
                         <div class="col">
                         <img src="./img/hyundai-logo copy.png">
                         </div>
@@ -131,7 +136,7 @@
                           <img src="img/lg-logo copy.png">
                         </div>
                       </div>
-                      <div class="row">
+                      <div class="row fadeDown">
                         <div class="col">
                           <img src="./img/lig-logo copy.png">
                         </div>
@@ -150,7 +155,7 @@
                       </div>         
                   </div>
                   <div class="container smallIcons">
-                    <div class="row">
+                    <div class="row fadeDown">
                       <div class="col">
                         <img src="./img/cellrtion-logo copy.png"/>
                       </div>
@@ -161,7 +166,7 @@
                         <img src="./img/coway-logo copy.png">
                       </div>
                     </div>
-                    <div class="row">
+                    <div class="row fadeDown">
                         <div class="col">
                         <img src="./img/eoder-logo copy.png">
                         </div>
@@ -172,7 +177,7 @@
                             <img src="./img/hyundai-logo copy.png">
                         </div>
                       </div>
-                      <div class="row">
+                      <div class="row fadeDown">
                         <div class="col">
                             <img src="./img/jakomo-logo copy.png">
                         </div>
@@ -183,7 +188,7 @@
                           <img src="./img/kia-logo copy.png">
                         </div>
                       </div>
-                      <div class="row">
+                      <div class="row fadeDown">
                         <div class="col">
                           <img src="./img/lg-logo copy.png">
                         </div>
@@ -194,7 +199,7 @@
                           <img src="./img/posco-logo copy.png">
                         </div>
                       </div>
-                      <div class="row">
+                      <div class="row fadeDown">
                         <div class="col">
                           <img src="./img/samsung-logo copy.png">
                         </div>
@@ -209,6 +214,8 @@
                   </div>
             </div>
         </div>
+        <!-- fourth_background -->
+        <footer></footer>
       </div>
     </div>
   </body>
