--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="inner">
           <div class="video_letter">
             <h3 class="vl1">THE STORY</h3>
-            <h2 class="vl2">MOVES <img src="./img/가로선.png" /></h2>
+            <h2 class="vl2">MOVES -</h2>
             <h3 class="vl3">WORLD</h3>
             <p class="vl4">스토리가 고객의 마음을 움직입니다.</p>
           </div>
@@ -55,7 +55,7 @@
       </div>
       <div class="sec_background">
         <div class="inner">
-          <h3 class="dot">"</h3>
+          <h3 class="dot fadeDown">"</h3>
           <h2 id="enComment" class="contents fadeDown" >
             Customers are immersed in the story,not the brand.<br />More
             importantly,no customer can resist the story.
@@ -65,7 +65,7 @@
             것은 스토리에 저항할 수 잇는 사람은 없다는 점입니다.
           </p>
           <br />
-          <h3 class="dot">"</h3>
+          <h3 class="dot fadeDown" >"</h3>
         </div>
       </div>
       <div class="third_background">
